--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,3 +5,5 @@ Changes
 ----------------
 
 - first release
+- NOTE: still missing security declarations on the autocomplete-search view.
+  This means anyone can query the source for values.
