--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Changes
 =======
 
+0.2 (unreleased)
+----------------
+
+- register the widget for IChoice fields with an ISearchableSource.
+  This functionality depends on z3c.form>=r96460 (will be included in
+  z3c.form-2.0).
+- improved documentation.
+
 0.1 (2009-02-06)
 ----------------
 
