--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,10 @@ Changes
 0.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+contributed by Roman Joost <roman@mooball.com>:
+- Added grouped forms support.
+- Added configuration options for delimiter character, minium query length and
+  the type-ahed feature
 
 
 0.3 (2010-02-26)
