Switch to jQuery UI and Fanstatic instead of YUI and zc.resourcelibrary.
This breaks all functional test setup, since we'd need a WSGI app with fanstatic now,
which is just plain too much work for the time being.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changes
 0.6 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Switch to jQuery UI and Fanstatic instead of YUI and zc.resourcelibrary.
 
 
 0.5 (2011-01-11)
